# howler-api

./: .coveragerc  .coveragerc.pytest  .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  generate_howler_conf.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py
build_scripts/: coverage_reports.py  generate_md_docs.py  run_tests.py  type_check.py  type_check.sh
dev/: docker-compose.yml  minimal.template
doc/: CONTRIBUTING.fr.md  CONTRIBUTING.md
docker/: Dockerfile  build_container.sh
howler/: app.py  config.py  error.py  gunicorn_config.py  healthz.py
howler/actions/: __init__.py  add_label.py  add_to_bundle.py  change_field.py  demote.py  example_plugin.py  prioritization.py  promote.py  remove_from_bundle.py  remove_label.py  transition.py
howler/api/: __init__.py  base.py  socket.py
howler/api/v1/: __init__.py  action.py  analytic.py  auth.py  borealis.py  configs.py  help.py  hit.py  notebook.py  overview.py  search.py  spellbook.py  template.py  tool.py  user.py  view.py
howler/api/v1/utils/: etag.py
howler/common/: README.md  classification.py  exceptions.py  hexdump.py  iprange.py  loader.py  memory_zip.py  net.py  random_user.py
howler/common/logging/: __init__.py  audit.py  format.py
howler/cronjobs/: __init__.py  correlations.py  retention.py  rules.py
howler/datastore/: README.md  build.py  bulk.py  collection.py  constants.py  exceptions.py  howler_store.py  operations.py  store.py  types.py
howler/datastore/migrations/: fix_process.py
howler/datastore/support/: build.py
howler/filestore/: README.md  __init__.py  exceptions.py
howler/filestore/transport/: azure.py  base.py  ftp.py  http.py  local.py  s3.py  sftp.py
howler/helper/: azure.py  discover.py  hit.py  oauth.py  search.py  workflow.py  ws.py
howler/odm/: README.md  __init__.py  base.py  helper.py  random_data.py  randomizer.py
howler/odm/models/: action.py  analytic.py  assemblyline.py  aws.py  azure.py  cbs.py  config.py  gcp.py  hit.py  howler_data.py  lead.py  template.py  user.py  view.py
howler/odm/models/ecs/: agent.py  client.py  cloud.py  code_signature.py  container.py  dns.py  elf.py  email.py  event.py  faas.py  file.py  geo.py  group.py  hash.py  host.py  http.py  ingress.py  interface.py  network.py  observer.py  organization.py  os.py  pe.py  process.py  registry.py  related.py  rule.py  server.py  threat.py  tls.py  url.py  user.py  user_agent.py  vulnerability.py
howler/remote/datatypes/: __init__.py  counters.py  events.py  hash.py  lock.py  set.py  user_quota_tracker.py
howler/remote/datatypes/queues/: comms.py  named.py  priority.py
howler/security/: __init__.py  socket.py  utils.py
howler/services/: action_service.py  analytic_service.py  auth_service.py  config_service.py  event_service.py  hit_service.py  jwt_service.py  notebook_service.py  user_service.py
howler/utils/: annotations.py  chunk.py  dict_utils.py  isotime.py  list_utils.py  path.py  socket_utils.py  spellbook.py  str_utils.py  uid.py
test/: conftest.py  docker-compose.yml  minimal.template  requirements.txt
test/config/: config.yml
test/integration/: test_datastore.py  test_datastore_odm.py  test_event_sink.py  test_filestore.py  test_remote_datatypes.py  test_websocket.py
test/integration/api/: test_actions.py  test_analytic.py  test_auth.py  test_bundles.py  test_comment.py  test_create_apikey.py  test_doc.py  test_hit.py  test_odm_errors.py  test_search.py  test_template.py  test_user.py  test_view.py
test/integration/cronjobs/: test_correlations.py  test_rules.py
test/unit/: config.yml  test_common.py  test_config.py  test_exceptions.py  test_net.py  test_odm.py  test_str_utils.py
test/unit/actions/: test_add_to_bundle.py  test_init.py  test_remove_from_bundle.py  test_spellbook_integration.py
test/unit/endpoints/: test_auth_endpoint.py
test/unit/helper/: test_workflow.py
test/unit/odm/: test_hit_fields.py
test/unit/services/: test_config_service.py  test_hit_service.py
test/unit/utils/: test_security_utils.py
test/utils/: oauth_credentials.py  test_disco_url.py
